2003-09-02  David Hyatt  <hyatt@apple.com>

	Fix for 3404452, paint errors on mezzoblue.com's links list.  There was a simple
	math error in the invalidation rect computation.
	
        Reviewed by mjs

        * khtml/rendering/render_flow.cpp:
        (RenderFlow::repaint):
        
2003-09-01  John Sullivan  <sullivan@apple.com>

	- WebCore part of fix for 3402489 -- REGRESSION (7B48-7B55): Some 
	printed web pages are too small (width is half a page)

	This was a regression caused by the fix for 3378810.

        Reviewed by Maciej

        * kwq/WebCoreBridge.h:
	add adjustingViewSize flag to forceLayout and forceLayoutForPageWidth:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge forceLayoutAdjustingViewSize:]):
	respect new flag while we are set up for printing.
        (-[WebCoreBridge forceLayoutForPageWidth:adjustingViewSize:]):
	ditto
        (-[WebCoreBridge adjustFrames:]):
	pass NO for new flag here

2003-09-01  John Sullivan  <sullivan@apple.com>

        * kwq/KWQPainter.mm:
        (QPainter::drawLine):
	Removed the ERROR that warns of the CG memory trashing bug, now
	that we are enough builds away from it that it is (almost?) never
	reported anymore.

=== Safari-96 ===

2003-08-29  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Ken.

	- fixed 3397775 21 leaks from CSS parser running PLT
	
        * khtml/css/css_ruleimpl.cpp:
        (CSSMediaRuleImpl::~CSSMediaRuleImpl): Clear the parent for all contained
	rules.
        (CSSMediaRuleImpl::append): Call insertRule.
        (CSSMediaRuleImpl::insertRule): set parent of the rule to this media rule.
        (CSSRuleListImpl::append): Call insertRule to cover all the relevant
	additional handling, instead of adding straight to the list.
        * khtml/css/css_ruleimpl.h:

2003-08-29  John Sullivan  <sullivan@apple.com>
	
	- fixed 3399880 -- Repro crash when filling out a form to 
	download Macromedia software

        Reviewed by Chris

        * kwq/WebCoreBridge.mm: